--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.PbFf590r.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.UjT6UD5G.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.WXdjNbwz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.o5DZyFkz.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.d141Feed.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.0rYLwD5H.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.hqEBd_Ju.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.s6eTzKZG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.jrNCVAMu.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.SWgjQMML.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.yV_Pt30H.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Tvs3xgFG.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_12s0ams = {
+					__sveltekit_6mbd77 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.WXdjNbwz.js"),
-						import("./_app/immutable/entry/app.hqEBd_Ju.js")
+						import("./_app/immutable/entry/start.d141Feed.js"),
+						import("./_app/immutable/entry/app.s6eTzKZG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
