--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.wzolCkr3.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YXDuxh_Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.134wjh09.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fUEyIq1I.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-BcMydUO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4F2qhlP6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.JyNAhWsw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.siONnHDH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vi14k1 = {
+					__sveltekit_1ve5fpx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YXDuxh_Q.js"),
-						import("./_app/immutable/entry/app.4F2qhlP6.js")
+						import("./_app/immutable/entry/start.fUEyIq1I.js"),
+						import("./_app/immutable/entry/app.JyNAhWsw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
