--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.B3WhdNb7.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.bfCXK8Z3.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.La49QphM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.1SLQRL5d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.zxzebjhQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.osOTbey1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Y9ut8yNA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.MHovR2Fw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.tMnCmwYv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.28vXeDGU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.VI-LwVLe.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.jzCrdJbQ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_18hshj = {
+					__sveltekit_1qwb9w6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.La49QphM.js"),
-						import("./_app/immutable/entry/app.Y9ut8yNA.js")
+						import("./_app/immutable/entry/start.zxzebjhQ.js"),
+						import("./_app/immutable/entry/app.MHovR2Fw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
