--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.bfCXK8Z3.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.zxzebjhQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.osOTbey1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.VAhPdt5E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Khp3Yuxb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.MHovR2Fw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.hwoyzqo1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.28vXeDGU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1qwb9w6 = {
+					__sveltekit_1n3wx6b = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.zxzebjhQ.js"),
-						import("./_app/immutable/entry/app.MHovR2Fw.js")
+						import("./_app/immutable/entry/start.VAhPdt5E.js"),
+						import("./_app/immutable/entry/app.hwoyzqo1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
