--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.bfCXK8Z3.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.EfYT2wAc.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7W3bXdR_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.JVH0Ihzh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.v2I1_EPA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pKOcWXGr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Py8WWGqw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.uJU_Ky9o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.28vXeDGU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.c2O-TvxA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.jzCrdJbQ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.N87lVe3Q.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_py18pr = {
+					__sveltekit_17hsigt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7W3bXdR_.js"),
-						import("./_app/immutable/entry/app.Py8WWGqw.js")
+						import("./_app/immutable/entry/start.v2I1_EPA.js"),
+						import("./_app/immutable/entry/app.uJU_Ky9o.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
