--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.hHx4W7xk.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DNY4neGW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-iEGCNWq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.yidiv3MR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.gMjWJak_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cX8eyuwl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.pfMzgZbj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.qbZD-mKy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_85f2op = {
+					__sveltekit_9vhqnw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DNY4neGW.js"),
-						import("./_app/immutable/entry/app.cX8eyuwl.js")
+						import("./_app/immutable/entry/start.yidiv3MR.js"),
+						import("./_app/immutable/entry/app.pfMzgZbj.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
