--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 		<link href="./_app/immutable/assets/0.hHx4W7xk.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Pp0xZNs6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Lp9nu6aV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.OvjIwv93.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.NeemJfhd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Q6UwyTBc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app._yoo0yU-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.qbZD-mKy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.kKQ0Q8lf.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.VQFszjzY.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1s0t7h = {
+					__sveltekit_slc5io = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Pp0xZNs6.js"),
-						import("./_app/immutable/entry/app.Q6UwyTBc.js")
+						import("./_app/immutable/entry/start.OvjIwv93.js"),
+						import("./_app/immutable/entry/app._yoo0yU-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
