--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 		<link href="./_app/immutable/assets/0.2g7XT3TH.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.gaZDmqLH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ni63DEJ_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.13kXTIDg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.rVMkhQ_D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.PDfDhNx7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.v3gp-WD1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Wq5gt3sH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.611ku7PZ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.8_B7QPOX.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_bwjua = {
+					__sveltekit_1xy9y37 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/note2"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.gaZDmqLH.js"),
-						import("./_app/immutable/entry/app.PDfDhNx7.js")
+						import("./_app/immutable/entry/start.13kXTIDg.js"),
+						import("./_app/immutable/entry/app.v3gp-WD1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
