--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.2g7XT3TH.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.hDIsB4ti.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.13kXTIDg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.rVMkhQ_D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.wibOmgHn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.NY8kyXAF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.v3gp-WD1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2QNc328.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Wq5gt3sH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/mode.GmPMGUR4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8_B7QPOX.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link href="./_app/immutable/assets/0.BuBcu_5B.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B8ZpfFB5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CWdKHLif.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ofL0hCKM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Yi_p0pkG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CbZ35Smg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.pZ7_no8Q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DUbg52vr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C210rO9c.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CDHrYxP2.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,9 +31,9 @@
 			
 			<script>
 				{
-					__sveltekit_1xy9y37 = {
+					__sveltekit_9t5ldc = {
 						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/note2"
+						assets: "/LightNote"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.13kXTIDg.js"),
-						import("./_app/immutable/entry/app.v3gp-WD1.js")
+						import("./_app/immutable/entry/start.B8ZpfFB5.js"),
+						import("./_app/immutable/entry/app.CbZ35Smg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
