--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.BuBcu_5B.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B8ZpfFB5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CWdKHLif.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DtjlWZ2C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DFBkvQIf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ofL0hCKM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Yi_p0pkG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CbZ35Smg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DopeLTxp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.pZ7_no8Q.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DUbg52vr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C210rO9c.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_9t5ldc = {
+					__sveltekit_cgr52u = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B8ZpfFB5.js"),
-						import("./_app/immutable/entry/app.CbZ35Smg.js")
+						import("./_app/immutable/entry/start.DtjlWZ2C.js"),
+						import("./_app/immutable/entry/app.DopeLTxp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
