--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 		<link href="./_app/immutable/assets/0.BuBcu_5B.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DtjlWZ2C.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DFBkvQIf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CwOHFh6u.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CNuaj4Vn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ofL0hCKM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Yi_p0pkG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DopeLTxp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DMge9gZF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.pZ7_no8Q.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DUbg52vr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C210rO9c.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CDHrYxP2.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.ivrAXp1Y.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_cgr52u = {
+					__sveltekit_b6ryvt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DtjlWZ2C.js"),
-						import("./_app/immutable/entry/app.DopeLTxp.js")
+						import("./_app/immutable/entry/start.CwOHFh6u.js"),
+						import("./_app/immutable/entry/app.DMge9gZF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
