--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.BuBcu_5B.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.WZSu26TF.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CwOHFh6u.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CNuaj4Vn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ofL0hCKM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Yi_p0pkG.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DMge9gZF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.pZ7_no8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DUbg52vr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C210rO9c.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.ivrAXp1Y.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B1uK0hZJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C_aAxGT1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B2eEdrb3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.mbNbF3Ep.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dew48IhZ.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_b6ryvt = {
+					__sveltekit_1cp0vn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CwOHFh6u.js"),
-						import("./_app/immutable/entry/app.DMge9gZF.js")
+						import("./_app/immutable/entry/start.B1uK0hZJ.js"),
+						import("./_app/immutable/entry/app.B2eEdrb3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
