--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 		<link href="./_app/immutable/assets/0.WZSu26TF.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.J06JmW_z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CT30_bES.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BxRmslfr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.GCuWv2E9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B-tzkxHy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DTY6vauA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.mbNbF3Ep.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CGGHeh3B.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.UL52MShq.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_13yn09o = {
+					__sveltekit_mchsmo = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.J06JmW_z.js"),
-						import("./_app/immutable/entry/app.B-tzkxHy.js")
+						import("./_app/immutable/entry/start.BxRmslfr.js"),
+						import("./_app/immutable/entry/app.DTY6vauA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
