--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<title>LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.WZSu26TF.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.A7p7tw2K.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.tznhb9Iy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DNIgM1PY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HlTXAMIQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C24-yqr3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CIrQ9nk3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.mbNbF3Ep.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CPMLMbZ7.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Zw7HdySI.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1b3wxrl = {
+					__sveltekit_633vq2 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.A7p7tw2K.js"),
-						import("./_app/immutable/entry/app.C24-yqr3.js")
+						import("./_app/immutable/entry/start.DNIgM1PY.js"),
+						import("./_app/immutable/entry/app.CIrQ9nk3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
