--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DNIgM1PY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.HlTXAMIQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CxG73acX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BluMd_RY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CIrQ9nk3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CPGM96y9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_633vq2 = {
+					__sveltekit_18yj54j = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DNIgM1PY.js"),
-						import("./_app/immutable/entry/app.CIrQ9nk3.js")
+						import("./_app/immutable/entry/start.CxG73acX.js"),
+						import("./_app/immutable/entry/app.CPGM96y9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
