--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.CEMiwHi2.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CxG73acX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BluMd_RY.js">
+		<link href="./_app/immutable/assets/2.DKJ6_X0v.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CRF6KTVq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DOCLaeaS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CPGM96y9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Ckop7-nd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Zw7HdySI.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BHrfwx2D.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_18yj54j = {
+					__sveltekit_1nk4aqb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CxG73acX.js"),
-						import("./_app/immutable/entry/app.CPGM96y9.js")
+						import("./_app/immutable/entry/start.CRF6KTVq.js"),
+						import("./_app/immutable/entry/app.Ckop7-nd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
