--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DKJ6_X0v.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CRF6KTVq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DOCLaeaS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B9BW1M4G.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DtwOOMEC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Ckop7-nd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.0RRBeBBA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1nk4aqb = {
+					__sveltekit_1qz82vn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CRF6KTVq.js"),
-						import("./_app/immutable/entry/app.Ckop7-nd.js")
+						import("./_app/immutable/entry/start.B9BW1M4G.js"),
+						import("./_app/immutable/entry/app.0RRBeBBA.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
