--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CaKj4uVh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CtPwPORu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BP3GXasi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CQJA9NkT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.slxN_Nbc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cg-YLXxd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CUhRkRqr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_o75wc7 = {
+					__sveltekit_1npd66t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CtPwPORu.js"),
-						import("./_app/immutable/entry/app.Cg-YLXxd.js")
+						import("./_app/immutable/entry/start.CQJA9NkT.js"),
+						import("./_app/immutable/entry/app.CUhRkRqr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
