--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CaKj4uVh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CQJA9NkT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.slxN_Nbc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CyxothPM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BGtQuTIO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CUhRkRqr.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BnbXbMtg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BVIeHMD0.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D7VZj9wc.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1npd66t = {
+					__sveltekit_do63n4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CQJA9NkT.js"),
-						import("./_app/immutable/entry/app.CUhRkRqr.js")
+						import("./_app/immutable/entry/start.CyxothPM.js"),
+						import("./_app/immutable/entry/app.BnbXbMtg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
