--- a/index.html
+++ b/index.html
@@ -5,33 +5,33 @@
 	<meta charset="utf-8" />
 	<link rel="manifest" href="./manifest.json" />
 	<link rel="icon" href="./favicon.ico" />
-	<title>LightNote</title>
+	<title>🔴 LightNote</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.B3Dy2eec.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CaKj4uVh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CyxothPM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BGtQuTIO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.COxbwMzl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.C2Jzycuw.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BnbXbMtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DiXqLa_v.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C1-CIf8s.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/mode.C0a2Dozw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.D7VZj9wc.js"><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CdhdowUU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CkVZd60p.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.MbFxzRFO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.4CETfav2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DM5KP_z7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dx8llSA6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.4ks4e_W-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/mode.Da2peUWn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BEPyGV4G.js"><title>🔴 LightNote</title><!-- HEAD_svelte-184nin2_START --><!-- HTML_TAG_START --><script nonce="%sveltekit.nonce%">(function setInitialMode() {
   const elem = document.documentElement, mode2 = localStorage.getItem("mode") || "system", light = mode2 === "light" || mode2 === "system" && window.matchMedia("(prefers-color-scheme: light)").matches;
   elem.classList[light ? "remove" : "add"]("dark");
   elem.style.colorScheme = light ? "light" : "dark";
   localStorage.setItem("mode", mode2);
-})();</script><!-- HTML_TAG_END --><!-- HEAD_svelte-184nin2_END -->
+})();</script><!-- HTML_TAG_END --><!-- HEAD_svelte-184nin2_END --><!-- HEAD_svelte-1az6e94_START --><!-- HEAD_svelte-1az6e94_END -->
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">   <main> <div class="bubble-menu rounded-md"></div> <div></div></main> 
+	<div style="display: contents">   <main>  <div class="bubble-menu rounded-md"></div> <div></div></main> 
 			
 			<script>
 				{
-					__sveltekit_do63n4 = {
+					__sveltekit_cl2jzv = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/LightNote"
 					};
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CyxothPM.js"),
-						import("./_app/immutable/entry/app.BnbXbMtg.js")
+						import("./_app/immutable/entry/start.CdhdowUU.js"),
+						import("./_app/immutable/entry/app.DM5KP_z7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
